update placeholder in run sql page

--- a/Pages/Database/RunSql.cshtml
+++ b/Pages/Database/RunSql.cshtml
@@ -14,7 +14,7 @@
                         asp-for="@Model.SqlQuery"
                         name="sqlQuery"
                         type="text" 
-                        placeholder="Primary textarea"></textarea>
+                        placeholder="SQL statement"></textarea>
             <input type="hidden" name="database" value="@Model.DatabaseName"/>
         </div>
     </div>
